--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,16 +3,84 @@
     <!-- references: youtube tutorial: https://www.youtube.com/watch?v=1lu4PenfVWc -->
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.google.ar.sceneform.ArSceneView
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-        android:id="@+id/arView"
+
+    <fragment android:name="com.example.arapplication.AugmentedImageFragment"
+        android:id="@+id/ux_fragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
+
+
+    <ImageView
+        android:id="@+id/image_view_fit_to_scan"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:contentDescription="@string/fit_image_to_scan"
+        android:scaleType="fitCenter"
+        android:src="@drawable/fit_to_scan" />
+
+
+
 
 </FrameLayout>
+
+    <TextView
+        android:id="@+id/planetInfoCard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="@drawable/rounded_bg"
+        android:padding="10dp"
+
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="50dp"
+        android:text="Index"
+        android:textAlignment="center" />
+
+    <TextView
+        android:id="@+id/middle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="@drawable/rounded_bg"
+        android:padding="10dp"
+
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="170dp"
+        android:text="Middle"
+        android:textAlignment="center" />
+
+    <TextView
+        android:id="@+id/thumb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="@drawable/rounded_bg"
+        android:padding="10dp"
+
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="290dp"
+        android:text="Thumb"
+        android:textAlignment="center" />
+
+
+
+
+</FrameLayout>
+
+
+
+
+
+
+
+
