--- a/app/src/main/res/layout/activity_ligaments.xml
+++ b/app/src/main/res/layout/activity_ligaments.xml
@@ -1,15 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ligaments">
+    tools:context=".MainActivity">
 
-    <com.google.ar.sceneform.ArSceneView
-
-        android:id="@+id/arView"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+
+
+        <fragment android:name="com.example.arapplication.AugmentedImageFragment"
+            android:id="@+id/ux_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+
+        <ImageView
+            android:id="@+id/image_view_fit_to_scan"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:contentDescription="@string/fit_image_to_scan"
+            android:scaleType="fitCenter"
+            android:src="@drawable/fit_to_scan" />
+
+
+
+
+    </FrameLayout>
+
+    <TextView
+        android:id="@+id/planetInfoCard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="@drawable/rounded_bg"
+        android:padding="10dp"
+
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="50dp"
+        android:text="Index lig"
+        android:textAlignment="center" />
+
+    <TextView
+        android:id="@+id/middle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="@drawable/rounded_bg"
+        android:padding="10dp"
+
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="170dp"
+        android:text="Middle lig"
+        android:textAlignment="center" />
+
+    <TextView
+        android:id="@+id/thumb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="@drawable/rounded_bg"
+        android:padding="10dp"
+
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="290dp"
+        android:text="Thumb lig"
+        android:textAlignment="center" />
+
+
+
 
 </FrameLayout>
