Implemeneted Firebase Analytics on the main camera view pages (Muscle, Bones, Ligaments) and Login activity, refactored the name of the 'MainActivity' page to Muscle and refactord the vairable name and textview from 'planetInforcard' to Index.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".Muscle">
 
 <FrameLayout
     android:layout_width="match_parent"
@@ -32,7 +32,7 @@
 </FrameLayout>
 
     <TextView
-        android:id="@+id/planetInfoCard"
+        android:id="@+id/index"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
