--- a/app/src/main/res/layout/activity_bones.xml
+++ b/app/src/main/res/layout/activity_bones.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".Muscle">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -31,7 +31,7 @@
     </FrameLayout>
 
     <TextView
-        android:id="@+id/planetInfoCard"
+        android:id="@+id/index"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
