--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,6 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/action_logout_btn"
-        android:title="@string/action_logout_text" />
+        android:id="@+id/sendAccount"
+        android:title="@string/sendAccount" />
 </menu>
