--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,40 +35,40 @@
         android:id="@+id/index"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="50dp"
         android:layout_weight="1"
         android:background="@drawable/rounded_bg"
         android:padding="10dp"
-        android:visibility="invisible"
-        android:layout_marginTop="50dp"
-        android:layout_marginLeft="40dp"
-        android:text="Americano"
-        android:textAlignment="center" />
+        android:text="Opp Pollicis"
+        android:textAlignment="center"
+        android:visibility="invisible" />
 
     <TextView
         android:id="@+id/middle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="160dp"
+        android:layout_marginTop="50dp"
         android:layout_weight="1"
         android:background="@drawable/rounded_bg"
         android:padding="10dp"
-        android:visibility="invisible"
-        android:layout_marginTop="50dp"
-        android:layout_marginLeft="170dp"
-        android:text="Latte"
-        android:textAlignment="center" />
+        android:text="ABD Pollis"
+        android:textAlignment="center"
+        android:visibility="invisible" />
 
     <TextView
         android:id="@+id/thumb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="270dp"
+        android:layout_marginTop="50dp"
         android:layout_weight="1"
         android:background="@drawable/rounded_bg"
         android:padding="10dp"
-        android:visibility="invisible"
-        android:layout_marginTop="50dp"
-        android:layout_marginLeft="270dp"
-        android:text="Hot Choc"
-        android:textAlignment="center" />
+        android:text="ADD Pollis"
+        android:textAlignment="center"
+        android:visibility="invisible" />
 
 
 
