--- a/app/src/main/res/layout/activity_bones.xml
+++ b/app/src/main/res/layout/activity_bones.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Muscle">
+    tools:context=".Bones">
+
+
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
 
 
         <fragment android:name="com.example.arapplication.AugmentedImageFragment"
@@ -29,6 +33,19 @@
 
 
     </FrameLayout>
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/main_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:background="@color/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.Toolbar>
+
+
+
 
     <TextView
         android:id="@+id/index"
