--- a/app/src/main/res/layout/activity_login_acitivity.xml
+++ b/app/src/main/res/layout/activity_login_acitivity.xml
@@ -86,8 +86,10 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
+        android:background="@color/colorPrimary"
+        android:indeterminate="true"
         android:progressTint="@color/colorAccent"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
