Added further camera functionality allowing the user to take and save pictures of their live camera feed with the 3D model displaying in a seprate Sceneform folder on the mobile device. The floating action button to take the photos has been set to invisble whilst the app is in tracking mode and then set to visible when the image is detcted by the system.

--- a/app/src/main/res/layout/activity_ligaments.xml
+++ b/app/src/main/res/layout/activity_ligaments.xml
@@ -80,6 +80,15 @@
         android:text="Thumb lig"
         android:textAlignment="center" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_marginBottom="60dp"
+        android:clickable="true"
+        app:srcCompat="@android:drawable/ic_menu_camera" />
+
 
 
 
