--- a/app/src/main/res/layout/activity_bones.xml
+++ b/app/src/main/res/layout/activity_bones.xml
@@ -7,15 +7,15 @@
     tools:context=".Bones">
 
 
-
     <FrameLayout
+        android:id="@+id/snapshotLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
 
-
-        <fragment android:name="com.example.arapplication.AugmentedImageFragment"
+        <fragment
             android:id="@+id/ux_fragment"
+            android:name="com.example.arapplication.AugmentedImageFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
@@ -28,8 +28,6 @@
             android:contentDescription="@string/fit_image_to_scan"
             android:scaleType="fitCenter"
             android:src="@drawable/fit_to_scan" />
-
-
 
 
     </FrameLayout>
@@ -85,6 +83,15 @@
         android:layout_marginLeft="280dp"
         android:text="Proximal Phalanx"
         android:textAlignment="center" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_marginBottom="60dp"
+        android:clickable="true"
+        app:srcCompat="@android:drawable/ic_menu_camera" />
 
 
 
