--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,28 +9,30 @@
     android:layout_height="match_parent"
     tools:context=".Muscle">
 
-<FrameLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-
-    <fragment android:name="com.example.arapplication.AugmentedImageFragment"
-        android:id="@+id/ux_fragment"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
 
 
-    <ImageView
-        android:id="@+id/image_view_fit_to_scan"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:contentDescription="@string/fit_image_to_scan"
-        android:scaleType="fitCenter"
-        android:src="@drawable/fit_to_scan" />
+        <fragment
+            android:id="@+id/ux_fragment"
+            android:name="com.example.arapplication.AugmentedImageFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
 
-</FrameLayout>
+        <ImageView
+            android:id="@+id/image_view_fit_to_scan"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:contentDescription="@string/fit_image_to_scan"
+            android:scaleType="fitCenter"
+            android:src="@drawable/fit_to_scan" />
+
+
+    </FrameLayout>
+
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/main_toolbar"
@@ -81,7 +83,14 @@
         android:textAlignment="center"
         android:visibility="invisible" />
 
-
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_marginBottom="60dp"
+        android:clickable="true"
+        app:srcCompat="@android:drawable/ic_menu_camera" />
 
 
 </FrameLayout>
