--- a/app/src/main/res/layout/activity_ligaments.xml
+++ b/app/src/main/res/layout/activity_ligaments.xml
@@ -27,8 +27,6 @@
             android:src="@drawable/fit_to_scan" />
 
 
-
-
     </FrameLayout>
 
     <androidx.appcompat.widget.Toolbar
@@ -45,40 +43,46 @@
         android:id="@+id/index"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="50dp"
         android:layout_weight="1"
+
         android:background="@drawable/rounded_bg"
         android:padding="10dp"
-
-        android:layout_marginTop="50dp"
-        android:layout_marginLeft="50dp"
-        android:text="Index lig"
-        android:textAlignment="center" />
+        android:text="@string/thumb_L_text"
+        android:textAlignment="center"
+        android:textColor="@color/whiteTransparentHalf"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/middle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="170dp"
+        android:layout_marginTop="50dp"
         android:layout_weight="1"
+
         android:background="@drawable/rounded_bg"
         android:padding="10dp"
-
-        android:layout_marginTop="50dp"
-        android:layout_marginLeft="170dp"
-        android:text="Middle lig"
-        android:textAlignment="center" />
+        android:text="@string/middle_text"
+        android:textAlignment="center"
+        android:textColor="@color/whiteTransparentHalf"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/thumb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="290dp"
+        android:layout_marginTop="50dp"
         android:layout_weight="1"
+
         android:background="@drawable/rounded_bg"
         android:padding="10dp"
-
-        android:layout_marginTop="50dp"
-        android:layout_marginLeft="290dp"
-        android:text="Thumb lig"
-        android:textAlignment="center" />
+        android:text="@string/thumb_text"
+        android:textAlignment="center"
+        android:textColor="@color/whiteTransparentHalf"
+        android:textStyle="bold" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
