--- a/app/src/main/res/layout/activity_slider_activity.xml
+++ b/app/src/main/res/layout/activity_slider_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/milky_way"
+    android:background="@drawable/milky_wayi"
     tools:context=".SliderActivity">
 
     <Button
