Final commit before uploading the code, code is referenced and minor changes to label positioning.

--- a/app/src/main/res/layout/activity_account_setup.xml
+++ b/app/src/main/res/layout/activity_account_setup.xml
@@ -8,6 +8,16 @@
     android:padding="20dp"
     tools:context=".accountSetup">
 
+    <!--
+/** Title: Android Blog App 2018 - Android Studio Firebase Tutorials - Part 5
+     * Author: Akshaye JH
+     * Date: 2018
+     * Availability: https://www.youtube.com/watch?v=sDf7NKROoDM&list=PLGCjwl1RrtcR4ptHvrc_PQIxDBB5MGiJA&index=5
+     */
+    -->
+
+
+
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/main_toolbar"
