--- a/app/src/main/res/layout/activity_bones.xml
+++ b/app/src/main/res/layout/activity_bones.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".Bones">
 
+    <!--
+        /** Title: ARCore Augmented Images
+     * Author: Google Code labs
+     * Date: 2019
+     * Code version: 2.0
+     * Availability: https://github.com/googlecodelabs/arcore-augmentedimage-intro
+     */
+    -->
+
 
     <FrameLayout
         android:id="@+id/snapshotLayout"
@@ -47,7 +56,7 @@
         android:id="@+id/index"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="5dp"
         android:layout_marginTop="50dp"
         android:layout_weight="1"
         android:background="@drawable/rounded_bg"
@@ -55,13 +64,14 @@
         android:text="@string/index_B_text"
         android:textAlignment="center"
         android:textColor="@color/whiteTransparentHalf"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:visibility="invisible" />
 
     <TextView
         android:id="@+id/middle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="170dp"
+        android:layout_marginLeft="150dp"
         android:layout_marginTop="50dp"
         android:layout_weight="1"
 
@@ -70,13 +80,14 @@
         android:text="@string/middle_B_text"
         android:textAlignment="center"
         android:textColor="@color/whiteTransparentHalf"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:visibility="invisible" />
 
     <TextView
         android:id="@+id/thumb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="300dp"
+        android:layout_marginLeft="270dp"
         android:layout_marginTop="50dp"
         android:layout_weight="1"
 
@@ -85,7 +96,8 @@
         android:text="@string/thumb_B_text"
         android:textAlignment="center"
         android:textColor="@color/whiteTransparentHalf"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:visibility="invisible" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
