--- a/app/src/main/res/layout/activity_login_acitivity.xml
+++ b/app/src/main/res/layout/activity_login_acitivity.xml
@@ -7,6 +7,30 @@
     android:background="@color/colorPrimary"
     tools:context=".LoginAcitivity">
 
+
+    <!--
+     /** Title: Android Blog App 2018 - Android Studio Firebase Tutorials - Part 2
+     * Author: Akshaye JH
+     * Date: 2018
+     * Availability: https://www.youtube.com/watch?v=WN4Xec0bNmo&list=PLGCjwl1RrtcR4ptHvrc_PQIxDBB5MGiJA&index=2
+     */
+    -->
+
+    <ImageView
+        android:id="@+id/hand_icon"
+        android:layout_width="78dp"
+        android:layout_height="88dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="60dp"
+        android:rotation="140"
+        android:src="@drawable/hand_h"
+        app:layout_constraintBottom_toTopOf="@+id/reg_email"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/reg_progress" />
+
     <EditText
         android:id="@+id/reg_email"
         android:layout_width="0dp"
@@ -52,8 +76,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:backgroundTint="@color/colorAccent"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
         android:text="@string/login_btn_text"
         android:textAllCaps="false"
         android:textColor="@android:color/white"
@@ -69,8 +93,8 @@
         android:layout_marginTop="50dp"
         android:layout_marginBottom="60dp"
         android:backgroundTint="@android:color/white"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
         android:text="@string/login_reg_btn_text"
         android:textAllCaps="false"
         android:textSize="18sp"
@@ -98,11 +122,12 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="100dp"
         android:fontFamily="@font/candal"
         android:text="@string/title_textView"
         android:textAlignment="center"
         android:textColor="@color/whiteTransparentHalf"
-        android:textSize="30sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/reg_email"
         app:layout_constraintEnd_toEndOf="parent"
