--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,16 @@
     android:layout_height="match_parent"
     tools:context=".Muscle">
 
+
+    <!--
+/** Title: ARCore Augmented Images
+* Author: Google Code labs
+* Date: 2019
+* Code version: 2.0
+* Availability: https://github.com/googlecodelabs/arcore-augmentedimage-intro
+*/
+-->
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -48,7 +58,7 @@
         android:id="@+id/index"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="5dp"
         android:layout_marginTop="50dp"
         android:layout_weight="1"
         android:background="@drawable/rounded_bg"
@@ -63,7 +73,7 @@
         android:id="@+id/middle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="170dp"
+        android:layout_marginLeft="150dp"
         android:layout_marginTop="50dp"
         android:layout_weight="1"
         android:background="@drawable/rounded_bg"
@@ -78,7 +88,7 @@
         android:id="@+id/thumb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="300dp"
+        android:layout_marginLeft="270dp"
         android:layout_marginTop="50dp"
         android:layout_weight="1"
         android:background="@drawable/rounded_bg"
